--- a/_static/custom.css
+++ b/_static/custom.css
@@ -81,7 +81,6 @@ div.body {
         right: 270px;
 }
 
-
 }
 
 @media screen and (max-width: 767px) {
@@ -329,3 +328,5 @@ a.external:not(.image-reference):after {
     top: 3px !important;
     width: 114px !important;
 }
+
+.uppercased:first-letter {text-transform: uppercase}
