Forcing the footer in mobile

--- a/_static/signalfx-includes.css
+++ b/_static/signalfx-includes.css
@@ -402,7 +402,7 @@ a.headerlink {
 
 @media (max-width: 767px) {
     .footer {
-        display: none;
+        display: none !important;
     }
 }
 
